[gd_scene load_steps=31 format=3 uid="uid://cqycyxq1nv4pa"]

[ext_resource type="Script" uid="uid://d20kaj7r2bag4" path="res://entities/enemies/skeleton/skeleton.gd" id="1_3ghqt"]
[ext_resource type="Texture2D" uid="uid://dtj0msbib567x" path="res://assets/0x72_DungeonTilesetII_v1.6.png" id="2_6xdao"]
[ext_resource type="Script" uid="uid://pn8dke6g2b6b" path="res://entities/components/health_component.gd" id="2_r5w5v"]
[ext_resource type="Script" uid="uid://q8hcxid6pdlo" path="res://entities/components/hitbox_component.gd" id="3_6e51r"]
[ext_resource type="Script" uid="uid://b2egrmqvxr0xj" path="res://entities/components/velocity_component.gd" id="4_frnk7"]
[ext_resource type="Script" uid="uid://b5ytt78lwv0ea" path="res://entities/enemies/components/pathfinding_component.gd" id="5_f8kv1"]
[ext_resource type="Script" uid="uid://de543k5gbwr5b" path="res://entities/components/damage_component.gd" id="6_1srtw"]
[ext_resource type="Texture2D" uid="uid://b2xxl5rs2ijik" path="res://assets/progress_outline.png" id="7_2dtvq"]
[ext_resource type="Script" uid="uid://3ogw5kcrnr0k" path="res://entities/components/projectile_spawner_component.gd" id="7_i3m8e"]
[ext_resource type="Script" uid="uid://c7xpamyhdiymg" path="res://entities/enemies/components/health_bar_component.gd" id="10_5qyoi"]
[ext_resource type="Script" uid="uid://ltuwdw82gobd" path="res://entities/enemies/components/player_tracking_component.gd" id="10_ff16j"]
[ext_resource type="Script" uid="uid://c1dec3hnix6q1" path="res://entities/components/orientation_component.gd" id="11_3gxbu"]
[ext_resource type="Script" uid="uid://4p0tbv3mot6r" path="res://entities/components/fov_component.gd" id="12_lja1g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7xj0l"]
size = Vector2(12, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pkm6j"]
size = Vector2(12, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_3kp21"]
radius = 368.348

[sub_resource type="AtlasTexture" id="AtlasTexture_hvfcx"]
atlas = ExtResource("2_6xdao")
region = Rect2(368, 88, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_loiej"]
atlas = ExtResource("2_6xdao")
region = Rect2(384, 88, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy7wr"]
atlas = ExtResource("2_6xdao")
region = Rect2(400, 88, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmkkx"]
atlas = ExtResource("2_6xdao")
region = Rect2(416, 88, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1mpc"]
atlas = ExtResource("2_6xdao")
region = Rect2(432, 88, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrk6r"]
atlas = ExtResource("2_6xdao")
region = Rect2(448, 88, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_80ao6"]
atlas = ExtResource("2_6xdao")
region = Rect2(464, 88, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kod62"]
atlas = ExtResource("2_6xdao")
region = Rect2(480, 88, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_d8fny"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvfcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_loiej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy7wr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmkkx")
}],
"loop": true,
"name": &"idle",
"speed": 7.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1mpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrk6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80ao6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kod62")
}],
"loop": true,
"name": &"walk",
"speed": 7.5
}]

[sub_resource type="Gradient" id="Gradient_4qln3"]
colors = PackedColorArray(0.870588, 0, 0, 1, 0.870588, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_oo7tf"]
gradient = SubResource("Gradient_4qln3")
width = 14
height = 2

[sub_resource type="Animation" id="Animation_km7lc"]
resource_name = "attack"
length = 3.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.6, 3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"spawn_projectile"
}, {
"args": ["move"],
"method": &"change_state"
}]
}

[sub_resource type="Animation" id="Animation_g17b7"]
resource_name = "move_disappear"
length = 3.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 2.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"pick_spot"
}, {
"args": ["idle"],
"method": &"change_state"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.0333333, 0, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [&"", 1.0, false],
"method": &"play"
}, {
"args": [&"move_disappear"],
"method": &"play"
}, {
"args": [&"move_appear"],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ns16c"]
_data = {
&"attack": SubResource("Animation_km7lc"),
&"move_disappear": SubResource("Animation_g17b7")
}

[node name="Skeleton" type="CharacterBody2D"]
collision_layer = 4
motion_mode = 1
script = ExtResource("1_3ghqt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_7xj0l")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_r5w5v")
max_health = 4

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 0
collision_mask = 32
script = ExtResource("3_6e51r")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_pkm6j")

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("4_frnk7")

[node name="PathfindingComponent" type="NavigationAgent2D" parent="." node_paths=PackedStringArray("velocity_component")]
path_desired_distance = 4.0
target_desired_distance = 4.0
avoidance_enabled = true
radius = 8.0
script = ExtResource("5_f8kv1")
velocity_component = NodePath("../VelocityComponent")

[node name="DamageComponent" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("6_1srtw")
damage = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageComponent"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_7xj0l")

[node name="ProjectileSpawnerComponent" type="Node" parent="."]
script = ExtResource("7_i3m8e")
projectile_scene_path = "res://entities/projectiles/enemy/enemy_projectile.tscn"
projectile_speed = 32

[node name="AggroRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroRange"]
shape = SubResource("CircleShape2D_3kp21")

[node name="OrientationComponent" type="Node2D" parent="."]
script = ExtResource("11_3gxbu")

[node name="FOVComponent" type="RayCast2D" parent="." node_paths=PackedStringArray("orientation_component")]
collision_mask = 3
script = ExtResource("12_lja1g")
orientation_component = NodePath("../OrientationComponent")
angle = 360
angle_step = 10
scan_range = 380

[node name="PlayerTrackingComponent" type="Node" parent="." node_paths=PackedStringArray("orientation_component", "fov_component", "velocity_component")]
script = ExtResource("10_ff16j")
orientation_component = NodePath("../OrientationComponent")
fov_component = NodePath("../FOVComponent")
velocity_component = NodePath("../VelocityComponent")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_d8fny")
animation = &"idle"

[node name="HealthbarComponent" type="TextureProgressBar" parent="." node_paths=PackedStringArray("health_component")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -20.0
offset_right = 8.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
value = 50.0
texture_under = ExtResource("7_2dtvq")
texture_progress = SubResource("GradientTexture2D_oo7tf")
texture_progress_offset = Vector2(1, 1)
script = ExtResource("10_5qyoi")
health_component = NodePath("../HealthComponent")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ns16c")
}
